Implementation nearly complete, ready to test

--- a/.env.example
+++ b/.env.example
@@ -1,55 +1,16 @@
-# Bijaz Environment Variables
-# Copy this file to .env and fill in your values
-# NEVER commit .env to version control
+# Bijaz environment variables (copy to .env)
 
-# ============================================================================
-# LLM API Keys (at least one required)
-# ============================================================================
-
-# Anthropic API (recommended for best reasoning)
-ANTHROPIC_API_KEY=sk-ant-...
-
-# OpenAI API (fallback)
-OPENAI_API_KEY=sk-...
-
-# ============================================================================
-# Blockchain
-# ============================================================================
-
-# Polygon RPC URL (get from Alchemy, Infura, or public endpoint)
-POLYGON_RPC_URL=https://polygon-rpc.com
-
-# ============================================================================
-# Wallet (required for live execution mode)
-# ============================================================================
-
-# Password for encrypting/decrypting wallet keystore
-# Use a strong, unique password (16+ chars recommended)
-# This is NOT your private key - it encrypts the keystore file
-# Required when execution.mode is 'live'
-BIJAZ_WALLET_PASSWORD=
-
-# ============================================================================
-# Intel Sources (optional)
-# ============================================================================
-
-# NewsAPI (https://newsapi.org)
-NEWSAPI_KEY=
-
-# Twitter/X API (https://developer.twitter.com)
-TWITTER_BEARER=
-
-# SerpAPI for Google News (https://serpapi.com)
-SERPAPI_KEY=
-
-# Google Gemini API for embeddings (https://ai.google.dev)
+ANTHROPIC_API_KEY=
+OPENAI_API_KEY=
+GOOGLE_API_KEY=
 GEMINI_API_KEY=
-
-# ============================================================================
-# Polymarket (optional, for authenticated endpoints)
-# ============================================================================
-
-# Polymarket API key (if using authenticated endpoints)
-POLYMARKET_API_KEY=
-POLYMARKET_API_SECRET=
-POLYMARKET_API_PASSPHRASE=
+NEWSAPI_KEY=
+SERPAPI_KEY=
+TWITTER_BEARER=
+TELEGRAM_BOT_TOKEN=
+WHATSAPP_VERIFY_TOKEN=
+WHATSAPP_ACCESS_TOKEN=
+WHATSAPP_PHONE_NUMBER_ID=
+BIJAZ_WALLET_PASSWORD=
+BIJAZ_KEYSTORE_PATH=
+POLYMARKET_WS_URL=
